--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ plugins {
 
 group = 'com.goorm'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+java {
+	sourceCompatibility = '17'
+}
 
 configurations {
 	compileOnly {
@@ -28,9 +30,6 @@ dependencies {
 	implementation 'org.postgresql:postgresql'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
 //	implementation 'com.querydsl:querydsl-jpa'
-//	implementation 'commons-io:commons-io:2.11.0'
-//	implementation 'commons-fileupload:commons-fileupload:1.4'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
