--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 plugins {
 	id 'java'
 	id 'war'
-	id 'org.springframework.boot' version '3.1.0'
+	id 'org.springframework.boot' version '3.0.7'
 	id 'io.spring.dependency-management' version '1.1.0'
-//	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
 
 group = 'com.goorm'
@@ -26,9 +25,12 @@ dependencies {
 	implementation project(':profile-box-comm')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'com.auth0:java-jwt:4.3.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	implementation 'org.postgresql:postgresql'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
+	implementation 'org.springframework.kafka:spring-kafka'
 //	implementation 'com.querydsl:querydsl-jpa'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -36,15 +38,6 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
-//// Spring Boot 플러그인 설정
-//bootJar {
-//	enabled = false  // JAR 패키징 비활성화
-//}
-//
-//war {
-//	enabled = true  // WAR 패키징 활성화
-//}
 
 tasks.named('test') {
 	useJUnitPlatform()
