--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-
 spring:
   profiles:
     include:
@@ -16,18 +14,11 @@ server:
   host:
     adminApi: http://profile-box-api-admin.default.svc.cluster.local:8080
     commApi: http://profile-box-comm.default.svc.cluster.local:8080
+---
+server:
+  servlet:
+    context-path: /
 
-springdoc:
-  config:
-    activate:
-      on-profile: prod
-  api-docs:
-    path: /api/user/v3/api-docs
-#  swagger-ui:
-##    disable-swagger-default-url: true
-##    path: /api/user/
-#    oauth2RedirectUrl: /api/user/swagger-ui/oauth2-redirect.html
-#    config-url: /api/user/v3/api-docs/swagger-config
 logging:
   level:
     root: DEBUG
@@ -40,7 +31,6 @@ api:
     termsOfServiceUrl:
     license: License
     licenseUrl: MY LICENSE URL
-
     contact:
       name: Contact
       url: My
@@ -73,18 +63,6 @@ server:
     adminApi: http://localhost:7002
     commApi: http://localhost:7003
 
-springdoc:
-  config:
-    activate:
-      on-profile: local
-  api-docs:
-    path: /v3/api-docs
-#  swagger-ui:
-#    oauth2RedirectUrl: /swagger-ui/oauth2-redirect.html
-#    config-url: /v3/api-docs/swagger-config
-#    disable-swagger-default-url: true
-#    path: /
-
 spring:
   config:
     activate:
@@ -93,57 +71,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/profile_box
     username: admin
     password: admin
-  kafka:
-    bootstrap-servers: localhost:9092
-    consumer:
-      group-id: myGroup
-
-
-#
-#spring:
-#  config:
-#    activate:
-#      on-profile: local
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/profile_box
-#    username: admin
-#    password: admin
-#
-#custom:
-#  config:
-#    activate:
-#      on-profile: local
-#  storage:
-#    filePath: /Users/hyenee/Downloads/workspace/goorm/msa/storage/files/
-#    imagePath: images/
-#    videoPath: videos/
-#---
-#server:
-#  config:
-#    activate:
-#      on-profile: prod
-#  port: 8080
-#  error.include-message: always
-#  tomcat:
-#    max-swallow-size: -1
-#
-#spring:
-#  config:
-#    activate:
-#      on-profile: prod
-#  datasource:
-#    #    url: jdbc:postgresql://docker.for.mac.host.internal:5432/profile_box
-#    #    username: admin
-#    #    password: admin
-#    url: jdbc:postgresql://rds-profilehub2.c28euk17mhxq.ap-northeast-2.rds.amazonaws.com:5432/profilehub
-#    username: cacao
-#    password: cacaocacao
-#
-#custom:
-#  config:
-#    activate:
-#      on-profile: prod
-#  storage:
-#    filePath: /storage/files/
-#    imagePath: images/
-#    videoPath: videos/
+#  kafka:
+#    bootstrap-servers: localhost:9092
+#    consumer:
+#      group-id: myGroup
