--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -30,6 +30,9 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
+      with:
+        repository: k8s12-CacaoEnt/profilehub
+        ref: main 
       
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
