--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -26,6 +26,11 @@ jobs:
       with:
         repository: k8s12-CacaoEnt/profilehub
         ref: main
+        
+    - name: List Files
+      run: |
+        pwd
+        ls -la
 
     - name: Checkout Sub Code
       uses: actions/checkout@v3
@@ -33,6 +38,23 @@ jobs:
         repository: k8s12-CacaoEnt/profile-box-api-user
         ref: main
         path: profile-box-api-user
+    
+    - name: List Files
+      run: |
+        pwd
+        ls -la
+        
+    - name: Checkout Comm Code
+      uses: actions/checkout@v3
+      with:
+        repository: k8s12-CacaoEnt/profile-box-comm
+        ref: main
+        path: profile-box-comm
+    
+    - name: List Files
+      run: |
+        pwd
+        ls -la
       
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
