--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -10,15 +10,13 @@ env:
   USER_GIT_REPOSITORY: profile-box-api-user
   COMM_REPOSITORY: profile-box-comm
   GITOPS_REPOSITORY: profile-box-gitops
+  GITOPS_DIR: gitops
+  GITOPS_YAML_FILE: profile-box-api-user.yaml
+  
   AWS_REGION: ap-northeast-2
   AWS_ECR_REGISTRY: 204770130849.dkr.ecr.ap-northeast-2.amazonaws.com
   AWS_ECR_REPOSITORY: profile-box-api-user
   IMG_TAG: ${{ github.sha }}
-  GITOPS_YAML_FILE: profile-box-api-user.yaml
-  
-#   EKS_CLUSTER_NAME: education-eks-B7gsMBzN
-#   DEPLOYMENT_NAME: dev-front
-#   CONTAINER_NAME: demo-frontend
 
 jobs:
   build:
@@ -88,10 +86,11 @@ jobs:
       
     - name: Update GitOps YAML Version and Commit
       run: |
-          cd ${{ env.GITOPS_REPOSITORY }}
-          sed -i 's/env.ecrRegistry\/env.ecrRepository:.*$/env.ecrRegistry\/env.ecrRepository:${{ env.IMG_TAG }}/' ${{env.GITOPS_YAML_FILE}}
+          cd ${{ env.GITOPS_REPOSITORY }}/${{ GITOPS_DIR }}
+          sed -i 's/${{ env.AWS_ECR_REPOSITORY }}:.*/${{ env.AWS_ECR_REPOSITORY }}:${{ env.IMG_TAG }}/' ${{env.GITOPS_YAML_FILE}}
           git config user.name ${{ secrets.USER_NAME }}
           git config user.email ${{ secrets.USER_EMAIL }}
           git add ${{ env.GITOPS_YAML_FILE }}
           git commit -m "Update YAML Image Tag To ${{ env.IMG_TAG }}"
+          cat ${{ env.GITOPS_YAML_FILE }}
 # git push http://${{ secrets.USER_NAME }}:${{ secrets.GIT_TOKEN }}@${GITEA_DOMAIN}${YAML_REPO}
