--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,12 +12,8 @@ server:
   tomcat:
     max-swallow-size: -1
   host:
-    adminApi: https://profile-box-api-admin.default.svc.cluster.local:8080
+    adminApi: https://profile-box-api-admin.api-admin.svc.cluster.local:8080
 ---
-server:
-  servlet:
-    context-path: /
-
 logging:
   level:
     root: DEBUG
